# valence-ui-monorepo

./: .env.example  .eslintignore  .gitignore  .npmrc  LICENSE  README.md  flake.nix  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  telescope.js  test-commit.txt  test-warning.txt  tsconfig.json  turbo.json
.github/workflows/: deploy-preview.yaml
.husky/: pre-commit
apps/ui-sandbox/: README.md  package.json  tailwind.config.js  tailwind.config.ts
apps/valence-app/: .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .prettierignore  .prettierrc.js  README.md  package.json  tailwind.config.ts  tsconfig.json
apps/valence-static/: .eslintignore  .prettierrc.js  README.md  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/valence-ui/: package.json  tsconfig.json
blog-posts/: Valence-intro.md
blog-posts/published/: 4-Ways-that-POL-Adds-Value-Across-the-Interchain.md  4_Ways.md  Covenants_Protocol-to-Protocol_Deals  Rebalancer-Protocol-Asset-Management.md  The-Emergence-of-Automated-POL-Markets.md  Valence-Purpose.md  Valence-intro.md  Valence-on-the-Cosmos-blog.md
blog-posts/unpublished/: Covenants_Protocol-to-Protocol_Deals.md  The-Emergence-of-Automated-POL-Markets.md  first-post.md
docs/: reports.md
protobuf-files/: README.md
scratch/: scratch.json  scratch.txt  scratch1.txt
scripts/: codegen.ts  ts-codegen.ts
src/app/: error.tsx  globals.css  layout.tsx  page.tsx
src/wasm/pid/: Cargo.toml
src/wasm/pid/pkg/: pid_bg.wasm  pid_bg.wasm.d.ts
src/wasm/pid/src/: lib.rs
(+1237 files in other folders)
