[package]
name        = "pid"
authors     = ["Yan Mayatskiy <r3mix.il@gmail.com>"]
description = "PID calculation to be used in UIs"
license     = "MIT/Apache-2.0"
# repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde              = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen       = "0.2"
cw-pid             = { git = "https://github.com/timewave-computer/valence-services", package = "cw-pid", branch = "separate-pid"}
